@@ -315,6 +315,13 @@ public class ManifestTest extends BuildFileTest {
         assertNotNull(mfAsString);
         assertTrue(mfAsString.startsWith("Manifest-Version: 2.0"));
         assertTrue(mfAsString.indexOf("Foo: Bar") > -1);
+
+        mf = getManifest("src/etc/testcases/taskdefs/mftest2.mf");
+        assertNotNull(mf);
+        mfAsString = mf.toString();
+        assertNotNull(mfAsString);
+        assertEquals(-1, mfAsString.indexOf("Foo: Bar"));
+        assertTrue(mfAsString.indexOf("Foo: Baz") > -1);
     }
 
     /**
